k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isl-recognition-api
  namespace: isl-recognition
spec:
  selector:
    app: isl-recognition-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
